--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="background-color:powderblue;">
 <h1>Hello World</h1>
 <p>This is a test</p>
+  <p>New Test on the index</p>
 </body>
 </html>
