--- a/test.html
+++ b/test.html
@@ -4,6 +4,6 @@
 <h1>Hello World</h1>
 <p>This is a test</p>
   <p>New test</p>
-  <a href="./index">Click Here</a>
+  <a href="./">Click Here</a>
 </body>
 </html>
