--- a/test.html
+++ b/test.html
@@ -4,6 +4,8 @@
 <h1>Hello World</h1>
 <p>This is a test</p>
   <p>New test</p>
+  <button>
   <a href="./">Click Here</a>
+    </button>
 </body>
 </html>
