--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <p>This is a test</p>
   <p>New Test on the index</p>
   <a href="./test">Click Here</a>
+  <a href="./Rand">Random</a>
 </body>
 </html>
