--- a/Rand.html
+++ b/Rand.html
@@ -1,4 +1,5 @@
 <html>
+    <body style="background-color:powderblue;">
     <head>
         <script src="https://randojs.com/1.0.0.js"></script>
         <script>
