--- a/Rand.html
+++ b/Rand.html
@@ -4,6 +4,7 @@
         <script src="https://randojs.com/1.0.0.js"></script>
         <script>
             function showRandomNumber(){
+                <b>Target Number</b>
                 document.getElementById("myNumber").innerHTML = rando(5, 10);
             }
         </script>
