--- a/Rand.html
+++ b/Rand.html
@@ -17,5 +17,7 @@
     </head>
     <body onload="showRandomNumber();">
         <div id="myNumber"></div>
+    
+    <body style="background-color:powderblue;">
     </body>
 </html>
