--- a/Rand.html
+++ b/Rand.html
@@ -2,6 +2,7 @@
     <head>
         <script src="https://randojs.com/1.0.0.js"></script>
         <script>
+            <b>Target Number</b>
             function showRandomNumber(){
                 document.getElementById("myNumber").innerHTML = rando(50, 1000);
             }
