--- a/Rand.html
+++ b/Rand.html
@@ -2,7 +2,7 @@
     <head>
         <script src="https://randojs.com/1.0.0.js"></script>
         <script>
-            <b>Target Number</b>
+            <h1>Target Number</h1>
             function showRandomNumber(){
                 document.getElementById("myNumber").innerHTML = rando(50, 1000);
             }
