--- a/Rand.html
+++ b/Rand.html
@@ -1,6 +1,8 @@
 <html>
     <head>
+        <header>
             <h1>Target Number</h1>
+        </header>
         <script src="https://randojs.com/1.0.0.js"></script>
         <script>
             function showRandomNumber(){
