--- a/Rand.html
+++ b/Rand.html
@@ -1,8 +1,12 @@
 <html>
     <head>
+        <style>
+            
+        h1 {text-align: center;}
         <header>
             <h1>Target Number</h1>
         </header>
+        </style>
         <script src="https://randojs.com/1.0.0.js"></script>
         <script>
             function showRandomNumber(){
