--- a/Rand.html
+++ b/Rand.html
@@ -56,7 +56,7 @@
     </head>
     <body onload="showRandomNumber();">
         <div id="myNumber"></div>
-    
+    <a href="./">Home</a>
     <body style="background-color:powderblue;">
     </body>
 </html>
