--- a/Rand.html
+++ b/Rand.html
@@ -54,9 +54,9 @@
             }
         </style>
     </head>
-    <body onload="showRandomNumber();">
+    <body>
         <div id="myNumber"></div>
     <body style="background-color:powderblue;">
-    <a href="./">Home</a>
+    <button onclick="showRandomNumber();">
     </body>
 </html>
