--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:powderblue;">
-<h1>Hello World</h1>
-<p>This is a test</p>
-  <p>New Test on the index</p>
+<h1>Cody's Website</h1>
+<p>This is my site</p>
   <a href="./test">Click Here</a>
   <a href="./Rand">Random</a>
 </body>
