--- a/Rand.html
+++ b/Rand.html
@@ -57,6 +57,6 @@
     <body>
         <div id="myNumber"></div>
     <body style="background-color:powderblue;">
-    <button onclick="showRandomNumber();">
+    <button onclick="showRandomNumber()"> Click for the target number </button>
     </body>
 </html>
