--- a/Rand.html
+++ b/Rand.html
@@ -57,6 +57,8 @@
     <body>
         <div id="myNumber"></div>
     <body style="background-color:powderblue;">
-    <button onclick="showRandomNumber()"> Click for the target number </button>
+    <button onclick="showTargetNumber()"> 
+        Click for the target number 
+    </button>
     </body>
 </html>
