--- a/Rand.html
+++ b/Rand.html
@@ -60,6 +60,6 @@
     <button onclick="showTargetNumber()"> 
         Click for the target number 
     </button>
-    <a href=./>Home</a>
+    <a href="./">Home</a>
     </body>
 </html>
