--- a/Rand.html
+++ b/Rand.html
@@ -57,9 +57,10 @@
     <body>
         <div id="myNumber"></div>
     <body style="background-color:powderblue;">
-    <button onclick="showTargetNumber()"> 
+    <button onclick="showTargetNumber()"; vertical-align: top> 
         Click for the target number 
-    </button>
+    </button>\n
+        
     <a href="./">Home</a>
     </body>
 </html>
