--- a/Rand.html
+++ b/Rand.html
@@ -59,7 +59,8 @@
     <body style="background-color:powderblue;">
     <button onclick="showTargetNumber()"; vertical-align: top> 
         Click for the target number 
-    </button>\n
+    </button>
+        <br>
         
     <a href="./">Home</a>
     </body>
