--- a/Rand.html
+++ b/Rand.html
@@ -57,7 +57,7 @@
     <body>
         <div id="myNumber"></div>
     <body style="background-color:powderblue;">
-    <button onclick="showTargetNumber()"; onclick="showBigNumber()"; onclick="showSmallNumber"> 
+    <button onclick="showTargetNumber()"; "showBigNumber()"; "showSmallNumber"> 
         Click for the target number 
     </button>
         <br>
