--- a/Rand.html
+++ b/Rand.html
@@ -58,7 +58,7 @@
         <div id="myNumber"></div>
     <body style="background-color:powderblue;">
     <button onclick="showTargetNumber()"; "showBigNumber()"; "showSmallNumber"> 
-        Click for the target number 
+        Click for the target number This updated
     </button>
         <br>
         
