--- a/Rand.html
+++ b/Rand.html
@@ -57,8 +57,8 @@
     <body>
         <div id="myNumber"></div>
     <body style="background-color:powderblue;">
-    <button onclick="showTargetNumber(); showBigNumber(); showSmallNumber"> 
-        Click for the target number
+    <button onclick="showTargetNumber();  showSmallNumber"> 
+        Click for the target numberjh
     </button>
         <br>
         
