--- a/Rand.html
+++ b/Rand.html
@@ -55,13 +55,8 @@
         </style>
     </head>
     <body>
-        <div id="myNumber"></div>
-    <body style="background-color:powderblue;">
-    <button onclick="showTargetNumber();  showSmallNumber"> 
-        Click for the target numberjh
-    </button>
-        <br>
-        
-    <a href="./">Home</a>
+        <iframe src="https://cindycullen.com">
+          Your browser doesn't like iframes
+        </iframe>
     </body>
 </html>
