--- a/Rand.html
+++ b/Rand.html
@@ -1,62 +1,6 @@
 <html>
-    <head>
-        <style>
-            
-        h1 {text-align: center;}
-        <header>
-            <h1>Target Number</h1>
-        </header>
-        </style>
-        <script src="https://randojs.com/1.0.0.js"></script>
-        <script>
-            function showTargetNumber(){
-                document.getElementById("myNumber").innerHTML = rando(100, 1000);
-            }
-        </script>
-        <style>
-            #myNumber{
-                font-size:100px;
-                text-align:center;
-                margin:50px auto;
-                font-family:Arial, sans-serif;
-            }
-        </style>
-
-
-        <script src="https://randojs.com/1.0.0.js"></script>
-        <script>
-            function showSmallNumber(){
-                document.getElementById("myNumber").innerHTML = rando(1,25);
-            }
-        </script>
-        <style>
-            #myNumber{
-                font-size:100px;
-                text-align:center;
-                margin:50px auto;
-                font-family:Arial, sans-serif;
-            }
-        </style>
-
-
-        <script src="https://randojs.com/1.0.0.js"></script>
-        <script>
-            function showBigNumber(){
-                document.getElementById("myNumber").innerHTML = rando(50,100);
-            }
-        </script>
-        <style>
-            #myNumber{
-                font-size:100px;
-                text-align:center;
-                margin:50px auto;
-                font-family:Arial, sans-serif;
-            }
-        </style>
-    </head>
+    
     <body>
-        <iframe src="https://cindycullen.com">
-          Your browser doesn't like iframes
-        </iframe>
+        Pi and its wonder
     </body>
 </html>
