--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <p>This is my site</p>
   <a href="./test">Click Here</a>
   <br>
-  <a href="./Rand">Random</a>
+  <br>
+  <a href="./Rand">Pi</a>
 </body>
 </html>
