--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <body style="background-color:powderblue;">
 <h1>Cody's Website</h1>
 <p>This is my site</p>
-  <a href="./test">Click Here</a>
+  <a href="./test">Pi</a>
   <br>
   <br>
-  <a href="./Rand">Pi</a>
+  <a href="./Rand">Amigurumi</a>
 </body>
 </html>
