--- a/test.html
+++ b/test.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:powderblue;">
-  <head>Pi</head>
-<h1>Hello World</h1>
+<h1>The Wonders of Pi</h1>
 <p>This is pi stuff soon</p>
   <p>Nest</p>
   <a href="./">Click Here</a>
