--- a/pi.html
+++ b/pi.html
@@ -2,9 +2,10 @@
 <html>
 <body style="background-color:powderblue;">
 <h1>The Wonders of Pi</h1>
-<p>This is pi stuff soon</p>
-  <p>Nest</p>
-  <a href="./">Click Here</a>
-  <p>Testttaslejt;</p>
+  <section>
+    Approximations of pi
+  </section>
+  <a href="./">Home</a>
+  <a href="./ami">Amigurumi</a>
 </body>
 </html>
