--- a/pi.html
+++ b/pi.html
@@ -5,7 +5,9 @@
   <section>
     Approximations of pi
   </section>
+ &frac227;
   <a href="./">Home</a>
+  <br>
   <a href="./ami">Amigurumi</a>
 </body>
 </html>
