--- a/pi.html
+++ b/pi.html
@@ -6,6 +6,7 @@
     Approximations of pi
   </section>
  &frac227;
+  <sup>22</sup>&fras1;<sub>7</sub>
   <a href="./">Home</a>
   <br>
   <a href="./ami">Amigurumi</a>
