--- a/pi.html
+++ b/pi.html
@@ -6,6 +6,9 @@
     Approximations of pi
   </section>
  &frac27;
+  <br>
+  1&frasl;2
+  <br>
   <sup>22</sup>&fras1;<sub>7</sub>
   <a href="./">Home</a>
   <br>
