--- a/pi.html
+++ b/pi.html
@@ -6,7 +6,8 @@
     Approximations of pi
   </section>
   <br>
-  22&frasl;7
+  22&frasl;7 &asymp 3.14285714286
+  <br>
   <a href="./">Home</a>
   <br>
   <a href="./ami">Amigurumi</a>
