--- a/pi.html
+++ b/pi.html
@@ -3,7 +3,7 @@
 <body style="background-color:powderblue;">
 <h1>The Wonders of Pi</h1>
   <section>
-    Approximations of pi
+    Approximations of &pi
   </section>
   <br>
   22&frasl;7 &asymp 3.14285714286
