--- a/pi.html
+++ b/pi.html
@@ -2,9 +2,9 @@
 <html>
 <body style="background-color:powderblue;">
 <h1>The Wonders of Pi</h1>
-  <section>
+  <title>
     Approximations of &pi;
-  </section>
+  </title>
   <br>
   22&frasl;7 &asymp; 3.14285714286
   <br>
