--- a/pi.html
+++ b/pi.html
@@ -2,9 +2,8 @@
 <html>
 <body style="background-color:powderblue;">
 <h1>The Wonders of Pi</h1>
-  <title>
-    Approximations of &pi;
-  </title>
+
+   <h2>Approximations of &pi;</h2>
   <br>
   22&frasl;7 &asymp; 3.14285714286
   <br>
