--- a/pi.html
+++ b/pi.html
@@ -5,7 +5,7 @@
 
    <h2>Approximations of &pi;</h2>
   <br>
-  22&frasl;7 &asymp; 3.14285714286
+  <p>22&frasl;7 &asymp; 3.14285714286</p>
   <br>
   <a href="./">Home</a>
   <br>
