--- a/pi.html
+++ b/pi.html
@@ -5,7 +5,7 @@
 
    <h2>Approximations of &pi;</h2>
   <br>
-  <p><font size +2>22&frasl;7 &asymp; 3.14285714286</font></p>
+  <p><font size=15>22&frasl;7 &asymp; 3.14285714286</font></p>
   <br>
   <a href="./">Home</a>
   <br>
