--- a/pi.html
+++ b/pi.html
@@ -5,7 +5,7 @@
 
    <h2>Approximations of &pi;</h2>
   <br>
-  <p><font size=6>22&frasl;7 &asymp; 3.14285714286</font></p>
+  <p><font size=6>22&frasl;7 &asymp; 3.14285714286, which is about .04025% off of the true value of &pi;</font></p>
   <br>
   <a href="./">Home</a>
   <br>
