--- a/pi.html
+++ b/pi.html
@@ -5,8 +5,11 @@
 
    <h2>Approximations of &pi;</h2>
   <br>
+   <b>Classic Approximation</b>
   <p><font size=6>22&frasl;7 &asymp; 3.14285714286, which is about .04025% off of the true value of &pi;</font></p>
   <br>
+   <b>The Basel Problem</b>
+   &sqrt;6(&Sigma;1&frasl;n^2)
   <a href="./">Home</a>
   <br>
   <a href="./ami">Amigurumi</a>
