--- a/pi.html
+++ b/pi.html
@@ -9,7 +9,7 @@
   <p><font size=6>22&frasl;7 &asymp; 3.14285714286, which is about .04025% off of the true value of &pi;</font></p>
   <br>
    <b>The Basel Problem</b>
-   &sqrt;6(&Sigma;1&frasl;n^2)
+   &sqrt;6(&Sigma;1&frasl;n<sup>2</sup>)
   <a href="./">Home</a>
   <br>
   <a href="./ami">Amigurumi</a>
