--- a/pi.html
+++ b/pi.html
@@ -5,13 +5,13 @@
 
    <h2>Approximations of &pi;</h2>
   <br>
-   <font size=10><b>Classic Approximation</b></font>
-  <p><font size=4>22&frasl;7 &asymp; 3.14285714286, which is about .04025% off of the true value of &pi;</font></p>
+   <font size=8><b>Classic Approximation</b></font>
+  <p><font size=5>22&frasl;7 &asymp; 3.14285714286, which is about .04025% off of the true value of &pi;</font></p>
   
    <br>
-   <b>The Basel Problem</b>
+   <font size=8><b>The Basel Problem</b></font>
    <br>
-   <font size =4> &Sqrt;6(&Sigma;1&frasl;n<sup>2</sup>)</font>
+   <font size =5> &Sqrt;6(&Sigma;1&frasl;n<sup>2</sup>)</font>
    <br>
   <a href="./">Home</a>
   <br>
