--- a/pi.html
+++ b/pi.html
@@ -11,7 +11,7 @@
    <br>
    <font size=8><b>The Basel Problem</b></font>
    <br>
-   <font size =5> &Sqrt;6(&Sigma;1&frasl;n<sup>2</sup>)</font>
+   <font size =5> <SQRT>6(&Sigma;1&frasl;n<sup>2</sup>)</SQRT></font>
    <br>
   <a href="./">Home</a>
   <br>
