--- a/pi.html
+++ b/pi.html
@@ -7,12 +7,14 @@
   <br>
    <font size=8><b>Classic Approximation</b></font>
   <p><font size=5>22&frasl;7 &asymp; 3.14285714286, which is about .04025% off of the true value of &pi;</font></p>
-  
    <br>
+   
    <font size=8><b>The Basel Problem</b></font>
    <br>
    <font size =5> <SQRT>6(&Sigma;1&frasl;n<sup>2</sup>)</SQRT></font>
    <br>
+
+   <font size=8><b>The Chudnovsky Algorithm</b></font>
   <a href="./">Home</a>
   <br>
   <a href="./ami">Amigurumi</a>
