--- a/pi.html
+++ b/pi.html
@@ -11,10 +11,11 @@
    
    <font size=8><b>The Basel Problem</b></font>
    <br>
-   <font size =5> <SQRT>6(&Sigma;1&frasl;n<sup>2</sup>)</SQRT></font>
+   <font size =5>&Sqrt;6(&Sigma;1&frasl;n<sup>2</sup></font>
    <br>
 
    <font size=8><b>The Chudnovsky Algorithm</b></font>
+   <br>
   <a href="./">Home</a>
   <br>
   <a href="./ami">Amigurumi</a>
