--- a/pi.html
+++ b/pi.html
@@ -11,7 +11,7 @@
    
    <font size=8><b>The Basel Problem</b></font>
    <br>
-   <font size =5>&Sqrt;6(&Sigma;1&frasl;n<sup>2</sup></font>
+   <font size =5>&Sqrt;6(&Sigma;1&frasl;n<sup>2</sup>=&Sqrt;6(1+1&frasl;4+1&frasl;9+...)=&pi;</font>
    <br>
 
    <font size=8><b>The Chudnovsky Algorithm</b></font>
