--- a/pi.html
+++ b/pi.html
@@ -18,11 +18,10 @@
    <font size=8><b>Madhava–Leibniz series</b></font>
    <br>
    <font size=5>Because tan(&pi;&frasl;4)=1, we know that arctan(1)=&pi;&frasl;4, which can be rearranged as 4arctan(1)=&pi;.
-    By the Maclaurin series of arctanx, we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
+    By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <br>
    
-   <font size=8><b>The Chudnovsky Algorithm</b></font>
-   <br>
+   
   <a href="./">Home</a>
   <br>
   <a href="./ami">Amigurumi</a>
