--- a/pi.html
+++ b/pi.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Wonders of Pi!</title>
    </head>
 <body style="background-color:powderblue;">
 <h1>The Wonders of Pi</h1>
