--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>My Website</title>
+   </head>
 <body style="background-color:powderblue;">
 <h1>Cody's Website</h1>
 <p>This is my site</p>
