--- a/pi.html
+++ b/pi.html
@@ -9,22 +9,21 @@
 <h1>The Wonders of Pi</h1>
 
    <h2>Approximations of &pi;</h2>
-  <br>
-   <font size=8><b>Classic Approximation</b></font>
+  <hr>
+   <font size=8><b>Classic Approximation</b></font><br>
   <p><font size=5>22&frasl;7 &asymp; 3.14285714286, which is about .04025% off of the true value of &pi;</font></p>
-   <br>
+   <hr>
    
    <font size=8><b>The Basel Problem</b></font>
    <br>
    <font size=5>&Sqrt;6(1+1&frasl;4+1&frasl;9+...)=&pi;</font>
-   <br>
-   <br>
+   <hr>
 
    <font size=8><b>Madhava–Leibniz series</b></font>
    <br>
    <font size=5>Because tan(&pi;&frasl;4)=1, we know that arctan(1)=&pi;&frasl;4, which can be rearranged as 4arctan(1)=&pi;.
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
-   <br>
+   <hr>
    
    
   <a href="./">Home</a>
