--- a/ami.html
+++ b/ami.html
@@ -5,10 +5,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Amigurumis</title>
    </head>
-    <body>
+<body style="background-color:powderblue;">
         Pi and its wonder
         <br>
   <a href="./">Home</a>
     <a href="./pi">Wonders of Pi</a>
-    </body>
+</body>
 </html>
