--- a/pi.html
+++ b/pi.html
@@ -25,6 +25,7 @@
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
    <img src="WIN_20210413_00_13_00_Pro (2).jpg">
+   Test
    
    
   <a href="./">Home</a>
