--- a/ami.html
+++ b/ami.html
@@ -6,8 +6,8 @@
       <title>Amigurumis</title>
    </head>
 <body style="background-color:powderblue;">
-        Pi and its wonder
-        <br>
+        <img src="PXL_20240222_220415171.jpg">
+     <h3>Mr. Toad</h3>
   <a href="./">Home</a>
     <a href="./pi">Wonders of Pi</a>
 </body>
