--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="background-color:powderblue;">
 <h1>Cody's Website</h1>
 <p>This is my site</p>
-  <a href="./pi">Pi</a>
+  <a href="./pi">Wonders of Pi</a>
   <br>
   <br>
   <a href="./ami">Amigurumi</a>
