--- a/ami.html
+++ b/ami.html
@@ -6,7 +6,8 @@
       <title>Amigurumis</title>
    </head>
 <body style="background-color:powderblue;">
-        <img src="PXL_20240222_220415171.jpg">
+        <img src="cdiyn3211.github.io/pics
+/PXL_20240222_220415171.jpg">
      <h3>Mr. Toad</h3>
      <hr>
   <a href="./">Home</a>
