--- a/ami.html
+++ b/ami.html
@@ -6,8 +6,7 @@
       <title>Amigurumis</title>
    </head>
 <body style="background-color:powderblue;">
-        <img src="cdiyn3211.github.io/pics
-/PXL_20240222_220415171.jpg">
+        <img src="pics/PXL_20240222_220415171.jpg">
      <h3>Mr. Toad jadlfja</h3>
      <hr>
   <a href="./">Home</a>
