--- a/ami.html
+++ b/ami.html
@@ -7,7 +7,7 @@
    </head>
 <body style="background-color:powderblue;">
         <img src="pics/PXL_20240222_220415171.jpg">
-     <h3>Mr. Toad jadlfja</h3>
+     <h3>Mr. Toad</h3>
      <hr>
   <a href="./">Home</a>
     <a href="./pi">Wonders of Pi</a>
