--- a/ami.html
+++ b/ami.html
@@ -6,7 +6,7 @@
       <title>Amigurumis</title>
    </head>
 <body style="background-color:powderblue;">
-        <img src="pics/PXL_20240222_220415171.jpg">
+        <img src="pics/PXL_20240222_220415171.jpg", width=100%, height=auto>
      <h3>Mr. Toad</h3>
      <hr>
   <a href="./">Home</a>
