--- a/pi.html
+++ b/pi.html
@@ -27,8 +27,8 @@
    <hr>
    
    
-  <a href="./">Home</a>
+  <a href="./"><button>Go Home</button></a>
   <br>
-  <a href="./ami">Amigurumi</a>
+  <a href="./ami"><button>Amigurumi</button></a>
 </body>
 </html>
