--- a/ami.html
+++ b/ami.html
@@ -6,10 +6,13 @@
       <title>Amigurumis</title>
    </head>
 <body style="background-color:powderblue;">
+     
+  <a href="./"><button>Home</button></a>
+    <a href="./pi"><button>Wonders of Pi</button></a>
         <img src="pics/PXL_20240222_220415171.jpg", width=70%, height=auto>
      <h3>Mr. Toad</h3>
      <hr>
-  <a href="./">Home</a>
-    <a href="./pi">Wonders of Pi</a>
+  <a href="./"><button>Home</button></a>
+    <a href="./pi"><button>Wonders of Pi</button></a>
 </body>
 </html>
