--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body style="background-color:powderblue;">
 <h1>Cody's Website</h1>
 <p>This is my site</p>
-  <a href="./pi">Wonders of Pi</a>
+  <a href="./pi"><button>Wonders of Pi</button></a>
   <br>
   <br>
-  <a href="./ami">Amigurumi</a>
+  <a href="./ami"><buttons>Amigurumi</buttons></a>
 </body>
 </html>
