--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <a href="./pi"><button>Wonders of Pi</button></a>
   <br>
   <br>
-  <a href="./ami"><buttons>Amigurumi</buttons></a>
+  <a href="./ami"><button>Amigurumi</button></a>
 </body>
 </html>
