--- a/pi.html
+++ b/pi.html
@@ -25,6 +25,7 @@
    <font size=5>Because tan(&pi;&frasl;4)=1, we know that arctan(1)=&pi;&frasl;4, which can be rearranged as 4arctan(1)=&pi;.
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
+   <p>This is done</p>
     <script src="https://randojs.com/1.0.0.js"></script>
         <script>
             function showRandomNumber(){
