--- a/pi.html
+++ b/pi.html
@@ -32,7 +32,10 @@
                 document.getElementById("myNumber").innerHTML = rando(5, 10);
             }
         </script>
-   <button onclick="showRandomNumber();">Get random Number Hopefully</button>
+   <button onclick="showRandomNumber();">
+        <div id="myNumber"></div>
+      Get random Number Hopefully
+   </button>
    
    
   <a href="./"><button>Go Home</button></a>
