--- a/pi.html
+++ b/pi.html
@@ -4,6 +4,14 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Wonders of Pi!</title>
+      
+      <script src="https://randojs.com/1.0.0.js"></script>
+        <script>
+            function showRandomNumber(){
+                document.getElementById("xValue").innerHTML = rando(5, 10);
+                document.getElementById("yValue").innerHTML = rando(5, 10);
+            }
+        </script>
    </head>
 <body style="background-color:powderblue;">
 <h1>The Wonders of Pi</h1>
@@ -25,16 +33,12 @@
    <font size=5>Because tan(&pi;&frasl;4)=1, we know that arctan(1)=&pi;&frasl;4, which can be rearranged as 4arctan(1)=&pi;.
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
-    <script src="https://randojs.com/1.0.0.js"></script>
-        <script>
-            function showRandomNumber(){
-                document.getElementById("myNumber").innerHTML = rando(5, 10);
-            }
-        </script>
+    
+   (<div id="xValue"></div>,<div id="yvalue"></div>)
    <button onclick="showRandomNumber();">
       Get random Number Hopefully
    </button>
-        <div id="myNumber"></div>
+   <hr>
    
    
   <a href="./"><button>Go Home</button></a>
