--- a/pi.html
+++ b/pi.html
@@ -8,8 +8,8 @@
       <script src="https://randojs.com/1.0.0.js"></script>
         <script>
             function showRandomNumber(){
-                document.getElementById("xValue").innerHTML = rando(5, 10);
-                document.getElementById("yValue").innerHTML = rando(5, 10);
+                document.getElementById("xValue").innerHTML = rando();
+                document.getElementById("yValue").innerHTML = rando();
             }
         </script>
    </head>
