--- a/pi.html
+++ b/pi.html
@@ -34,7 +34,7 @@
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
     
-   (<div id="xValue"></div>,<div id="yvalue"></div>)
+   <div id="xValue"></div><br><div id="yvalue"></div>
    <button onclick="showRandomNumber();">
       Get random Number Hopefully
    </button>
