--- a/pi.html
+++ b/pi.html
@@ -7,8 +7,11 @@
       
       <script src="https://randojs.com/1.0.0.js"></script>
         <script>
-            function showRandomNumber(){
+            function showXValue(){
                 document.getElementById("xValue").innerHTML = rando();
+            }
+
+           function showYValue(){
                 document.getElementById("yValue").innerHTML = rando();
             }
         </script>
@@ -33,9 +36,9 @@
    <font size=5>Because tan(&pi;&frasl;4)=1, we know that arctan(1)=&pi;&frasl;4, which can be rearranged as 4arctan(1)=&pi;.
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
-    
+    lkjdad
    <div id="xValue"></div><br><div id="yvalue"></div>
-   <button onclick="showRandomNumber();">
+   <button onclick="showXValue();" onclick="showYValue();">
       Get random Number Hopefully
    </button>
    <hr>
