--- a/pi.html
+++ b/pi.html
@@ -36,8 +36,8 @@
    <font size=5>Because tan(&pi;&frasl;4)=1, we know that arctan(1)=&pi;&frasl;4, which can be rearranged as 4arctan(1)=&pi;.
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
-    lkjdad
-   <div id="xValue"></div><br><div id="yvalue"></div>
+    
+   <div id="yvalue"></div>
    <button onclick="showXValue();" onclick="showYValue();">
       Get random Number Hopefully
    </button>
