--- a/pi.html
+++ b/pi.html
@@ -37,7 +37,7 @@
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
     
-   <div id="yValue"></div>
+   <div id="xValue"></div>
    <button onclick="showXValue();" onclick="showYValue();">
       Get random Number Hopefully
    </button>
