--- a/pi.html
+++ b/pi.html
@@ -39,7 +39,7 @@
     
    <div id="xValue"></div>
    <button onclick="showXValue();" onclick="showYValue();">
-      Get random Number Hopefully
+      Get random Number 
    </button>
    <hr>
    
