--- a/pi.html
+++ b/pi.html
@@ -41,6 +41,7 @@
    <button onclick="showXValue();" onclick="showYValue();">
       Get random Number 
    </button>
+   <div id="xValue"></div>
    <hr>
    
    
