--- a/pi.html
+++ b/pi.html
@@ -37,11 +37,11 @@
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
     
-   <div id="xValue"></div>
+   <div id="xValue"></div> <br>alfkdsja;
+   <div id="yValue"></div>
    <button onclick="showXValue();" onclick="showYValue();">
       Get random Number 
    </button>
-   <div id="xValue"></div>
    <hr>
    
    
