--- a/pi.html
+++ b/pi.html
@@ -37,9 +37,9 @@
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
     
-   <div id="xValue"></div> <br>alfkdsja;
-   <div id="yValue"></div>
-   <button onclick="showXValue();" onclick="showYValue();">
+   <div id="xValue"></div> <br>
+   <div id="yValue"></div>al;dkjf
+   <button onclick="showXValue();", onclick="showYValue();">
       Get random Number 
    </button>
    <hr>
