--- a/pi.html
+++ b/pi.html
@@ -39,7 +39,7 @@
     
    <div id="xValue"></div> <br>
    <div id="yValue"></div>al;dkjf
-   <button onclick="showXValue();", onclick="showYValue();">
+   <button onclick="showXValue(); showYValue();">
       Get random Number 
    </button>
    <hr>
