--- a/pi.html
+++ b/pi.html
@@ -4,17 +4,6 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Wonders of Pi!</title>
-      
-      <script src="https://randojs.com/1.0.0.js"></script>
-        <script>
-            function showXValue(){
-                document.getElementById("xValue").innerHTML = rando();
-            }
-
-           function showYValue(){
-                document.getElementById("yValue").innerHTML = rando();
-            }
-        </script>
    </head>
 <body style="background-color:powderblue;">
 <h1>The Wonders of Pi</h1>
@@ -36,13 +25,11 @@
    <font size=5>Because tan(&pi;&frasl;4)=1, we know that arctan(1)=&pi;&frasl;4, which can be rearranged as 4arctan(1)=&pi;.
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
-    
-   <div id="xValue"></div> <br>
-   <div id="yValue"></div>al;dkjf
-   <button onclick="showXValue(); showYValue();">
-      Get random Number 
-   </button>
-   <hr>
+   
+    <h3>Euler's Identity</h3>
+   <br>
+   <font size=5>Euler's Identity states that e<sup>i&pi;</sup>+1=0. With some algebra, this means that &pi;=ln(-1)&frasl;i.
+
    
    
   <a href="./"><button>Go Home</button></a>
