--- a/pi.html
+++ b/pi.html
@@ -28,9 +28,9 @@
    
     <h3>Euler's Identity</h3>
    <br>
-   <font size=5>Euler's Identity states that e<sup>i&pi;</sup>+1=0. With some algebra, this means that &pi;=ln(-1)&frasl;i.
+   <font size=5>Euler's Identity states that e<sup>i&pi;</sup>+1=0. With some algebra, this means that &pi;=(ln(-1))&frasl;(i).
 
-   
+   <br>
    
   <a href="./"><button>Go Home</button></a>
   <br>
