--- a/pi.html
+++ b/pi.html
@@ -22,13 +22,13 @@
 
    <font size=8><b>Madhava–Leibniz series</b></font>
    <br>
-   <font size=5>Because tan(&pi;&frasl;4)=1, we know that arctan(1)=&pi;&frasl;4, which can be rearranged as 4arctan(1)=&pi;.
+   <font size=5>Because tan(&pi;&frasl;4)=1, we know that arctan(1)=<sup>&pi;</sup>&frasl;4, which can be rearranged as 4arctan(1)=&pi;.
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
    
     <h3>Euler's Identity</h3>
    <br>
-   <font size=5>Euler's Identity states that e<sup>i&pi;</sup>+1=0. With some algebra, this means that &pi;=(ln(-1))&frasl;(i).
+   <font size=5>Euler's Identity states that e<sup>i&pi;</sup>+1=0. With some algebra, this means that &pi;=<sup>ln(-1)</sup>&frasl;<sub>i</sub>.
 
    <br>
    
