--- a/pi.html
+++ b/pi.html
@@ -26,7 +26,7 @@
     By the Maclaurin series of arctan(x), we get that 4arctan(1)=4(1-1&frasl;3+1&frasl;5-1&frasl;7+...)=&pi;.</font>
    <hr>
    
-    <font size=8>Euler's Identity</font>
+    <font size=8><b>Euler's Identity</b></font>
    <br>
    <font size=5>Euler's Identity states that e<sup>i&pi;</sup>+1=0. With some algebra, this means that &pi;=<sup>ln(-1)</sup>&frasl;<sub>i</sub>.
 
