--- a/pi.html
+++ b/pi.html
@@ -6,7 +6,7 @@
       <title>Wonders of Pi!</title>
    </head>
 <body style="background-color:powderblue;">
-<h1>The Wonders of Pi</h1>
+<h1 class="boxed">The Wonders of Pi</h1>
    <hr>
 
    <h2>Approximations of &pi;</h2>
