--- a/pi.html
+++ b/pi.html
@@ -32,7 +32,7 @@
 
    <br>
    
-  <a href="./"><button>Go Home</button></a>
+  <a href="./" class="boxed btn"><button>Go Home</button></a>
   <br>
   <a href="./ami"><button>Amigurumi</button></a>
 </body>
