--- a/pi.html
+++ b/pi.html
@@ -28,7 +28,7 @@
    
     <font size=8><b>Euler's Identity</b></font>
    <br>
-   <font size=5>Euler's Identity states that e<sup>i&pi;</sup>+1=0. With some algebra, this means that &pi;=<sup>ln(-1)</sup>&frasl;<sub>i</sub>.
+   <font size=5>Euler's Identity states that e<sup>i&pi;</sup>+1=0. With some algebra, this means that <sup>ln(-1)</sup>&frasl;<sub>i</sub>=&pi;.
 
    <br>
    
