--- a/ami.html
+++ b/ami.html
@@ -10,7 +10,7 @@
   <a href="./"><button>Home</button></a>
     <a href="./pi"><button>Wonders of Pi</button></a>
      <hr>
-        <img src="pics/PXL_20240222_220415171.jpg", width=70%, height=auto>
+        <img src="pics/pic.jpg", width=70%, height=auto>
      <h3>Mr. Toad</h3>
      <hr>
   <a href="./"><button>Home</button></a>
