--- a/ami.html
+++ b/ami.html
@@ -11,6 +11,7 @@
     <a href="./pi"><button>Wonders of Pi</button></a>
      <hr>
           <img src="pics/PXL_20240226_231129415.MP.jpg", width=70%, height=auto>
+     <h3>Barbara</h3>
      <hr>
         <img src="pics/pic.jpg", width=70%, height=auto>
      <h3>Mr. Toad</h3>
