--- a/ami.html
+++ b/ami.html
@@ -10,7 +10,7 @@
   <a href="./"><button>Home</button></a>
     <a href="./pi"><button>Wonders of Pi</button></a>
      <hr>
-          <img src="pics/PXL_20240226_231129415.MP.jpg", width=70%, height=auto>
+          <img src="pics/Barbara.MP.jpg", width=70%, height=auto>
      <h3>Barbara</h3>
      <hr>
         <img src="pics/pic.jpg", width=70%, height=auto>
