--- a/pi.html
+++ b/pi.html
@@ -6,6 +6,9 @@
       <title>Wonders of Pi!</title>
    </head>
 <body style="background-color:powderblue;">
+    <a href="./" class="boxed btn"><button>Go Home</button></a>
+  <br>
+  <a href="./ami"><button>Amigurumi</button></a>
 <h1 class="boxed">The Wonders of Pi</h1>
    <hr>
 
