--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
   <br>
   <br>
   <a href="./ami"><button>Amigurumi</button></a>
+   <br>
+   <br>
+   
+  <a href="./ipa"><button>IPA Practice</button></a>
 </body>
 </html>
