--- a/ipa.html
+++ b/ipa.html
@@ -54,11 +54,9 @@
     }
 </script>
 
-
-
-
-
-
-
-
+<a href="./"><button>Home</button></a>
+<a href="./pi"><button>Wonders of Pi</button></a>
+  <br>
+  <br>
+  <a href="./ami"><button>Amigurumi</button></a>
 </body>
