--- a/pi.html
+++ b/pi.html
@@ -35,6 +35,9 @@
    <font size=5>Euler's Identity states that e<sup>i&pi;</sup>+1=0. With some algebra, this means that <sup>ln(-1)</sup>&frasl;<sub>i</sub>=&pi;.
 
    <br>
+      <hr>
+      <img src="pics/Cont_Fract.svg">
+      <hr>
    
    <hr>
   <a href="./" class="boxed btn"><button>Go Home</button></a>
