--- a/pi.html
+++ b/pi.html
@@ -36,7 +36,7 @@
 
    <br>
       <hr>
-      <img src="pics/Cont_Fract.svg">
+      <img src="pics/Cont_Fract.svg", width=70%, height=auto>
       <hr>
    
    <hr>
