--- a/pi.html
+++ b/pi.html
@@ -10,15 +10,15 @@
   <br>
   <a href="./ami"><button>Amigurumi</button></a>
    <hr>
-<h1 class="boxed">The Wonders of Pi</h1>
+<font size=12><b>The Wonders of Pi</b></font>
    <hr>
 
-   <h2>Approximations of &pi;</h2>
+   <font size=10><b>Approximations of &pi;</b></font>
   <hr>
    <font size=8><b>Classic Approximation</b></font><br>
   <p><font size=5>22&frasl;7 &asymp; 3.14285714286, which is about .04025% off of the true value of &pi;</font></p>
    <hr>
-   
+   <font size=10><b>Weird Equalities of &pi;</b></font>
    <font size=8><b>The Basel Problem</b></font>
    <br>
    <font size=5>&Sqrt;6(1+1&frasl;4+1&frasl;9+...)=&pi;</font>
