--- a/pi.html
+++ b/pi.html
@@ -18,6 +18,7 @@
    <font size=8><b>Classic Approximation</b></font><br>
   <p><font size=5>22&frasl;7 &asymp; 3.14285714286, which is about .04025% off of the true value of &pi;</font></p>
    <hr>
+   <p><font size=5>333&frasl;106 &asymp; 3.1415094339622, which is about .002649% off of the true value of &pi;</font></p>
    <font size=10><b>Weird Equalities of &pi;</b></font>
    <font size=8><b>The Basel Problem</b></font>
    <br>
