--- a/pi.html
+++ b/pi.html
@@ -15,6 +15,7 @@
 
    <font size=10><b>Approximations of &pi;</b></font>
   <hr>
+   <font size=8><b>Earliest Approximation</b></font>
    <font size=8><b>Classic Approximation</b></font><br>
   <p><font size=5>22&frasl;7 &asymp; 3.14285714286, which is about .04025% off of the true value of &pi;</font></p>
    <hr>
