--- a/pi.html
+++ b/pi.html
@@ -16,6 +16,8 @@
    <font size=10><b>Approximations of &pi;</b></font>
   <hr>
    <font size=8><b>Earliest Approximation</b></font>
+   Ancient Babylonians and Egyptians from 1900-1600 BCE treats pi as 25&frasl;8=3.125, which is about 0.528% of of the true value of &pi;
+   <hr>
    <font size=8><b>Classic Approximation</b></font><br>
   <p><font size=5>22&frasl;7 &asymp; 3.14285714286, which is about .04025% off of the true value of &pi;</font></p>
    <hr>
