--- a/pi.html
+++ b/pi.html
@@ -45,7 +45,7 @@
       <hr>
       <img src="pics/Cont_Fract.svg", width=40%, height=auto>
       <hr>
-   
+   16arctan(1&frasl;5)-4arctan(1&frasl;239)=&pi;
    <hr>
   <a href="./" class="boxed btn"><button>Go Home</button></a>
   <br>
