--- a/pi.html
+++ b/pi.html
@@ -24,6 +24,9 @@
    <hr>
    <p><font size=5>333&frasl;106 &asymp; 3.1415094339622, which is about .002649% off of the true value of &pi;</font></p>
    <hr>
+   <font size=6><b><b>My Approximation</b></b></font>
+   <br>
+   <p><font size=5>e<sup>1.009561184+ln(ln(&pi;))</sup> is about 2.29*10<sup>-8</sup>% off of the true value of &pi;</p>
    <font size=10><b>Weird Equalities of &pi;</b></font>
    <hr>
    <font size=6><b>The Basel Problem</b></font>
