--- a/pi.html
+++ b/pi.html
@@ -26,7 +26,8 @@
    <hr>
    <font size=6><b><b>My Approximation</b></b></font>
    <br>
-   <p><font size=5>e<sup>1.009561184+ln(ln(&pi;))</sup> is about 2.29*10<sup>-8</sup>% off of the true value of &pi;</p>
+   <p><font size=5>e<sup>1.009561184+ln(ln(&pi;))</sup> is about 2.29X10<sup>-8</sup>% off of the true value of &pi;</p>
+   <hr>
    <font size=10><b>Weird Equalities of &pi;</b></font>
    <hr>
    <font size=6><b>The Basel Problem</b></font>
