--- a/ipa.html
+++ b/ipa.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>My Website</title>
+      <title>IPA Practice</title>
    </head>
 <body style="background-color:powderblue;">
  <h2>random word generator</h2>
