--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
   <br>
   <a href="./ami"><button>Amigurumi</button></a>
    <br>
+   
+  <a href="./ipa"><button>IPA</button></a>
+   <br>
 </body>
 </html>
