--- a/ami.html
+++ b/ami.html
@@ -16,6 +16,8 @@
         <img src="pics/pic.jpg", width=70%, height=auto>
      <h3>Mr. Toad</h3>
      <hr>
+          <img src="pics/Free_Hand_Bee-143926.png", width=70%, height=auto>
+     <h3>Beatrice (Free Hand)</h3>
   <a href="./"><button>Home</button></a>
     <a href="./pi"><button>Wonders of Pi</button></a>
 </body>
