--- a/pona.html
+++ b/pona.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title></title>
+      <title>Toki Pona</title>
    </head>
 <body style="background-color:powderblue;", onload="getWord()">
  <h2>Learn Toki Pona</h2>
