--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a href="./ami"><button>Amigurumi</button></a>
    <br>
    
-  <a href="./ipa"><button>Toki Pona</button></a>
+  <a href="./pona"><button>Toki Pona</button></a>
    <br>
 </body>
 </html>
