--- a/pona.html
+++ b/pona.html
@@ -26,7 +26,7 @@
     btn.addEventListener("click", getWord);
    
     function getWord(){
-     
+     System.out.prinln("Started");
       //Make the dictionary of the words
       var theWord= [
         "a",
@@ -63,6 +63,7 @@
 </script>
      <br>
      <br>
+     hello
 <a href="./"><button>Home</button></a>
      <br>
 <a href="./pi"><button>Wonders of Pi</button></a>
