--- a/pona.html
+++ b/pona.html
@@ -23,7 +23,7 @@
     var out = document.getElementById("output");
     
   
-    btn.addEventListener("click", getWord);
+    btn.addEventListener("click", getWord());
    
     function getWord(){
      System.out.prinln("Started");
