--- a/pona.html
+++ b/pona.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Toki Pona</title>
    </head>
-<body style="background-color:powderblue;", onload="getWord()">
+<body style="background-color:powderblue;", onload=getWord()>
  <h2>Learn Toki Pona</h2>
   <div>
     <button>Get New Word</button>
@@ -63,7 +63,6 @@
 </script>
      <br>
      <br>
-     hello
 <a href="./"><button>Home</button></a>
      <br>
 <a href="./pi"><button>Wonders of Pi</button></a>
