--- a/pona.html
+++ b/pona.html
@@ -8,7 +8,7 @@
 <body style="background-color:powderblue;", onload=getWord()>
  <h2>Learn Toki Pona</h2>
   <div>
-    <button>Get New Word</button>
+    <button type="button" onclick=getWord()>Get New Word</button>
   </div>
   <div>
    
