--- a/pona.html
+++ b/pona.html
@@ -8,7 +8,7 @@
 <body style="background-color:powderblue;", onload=getWord()>
  <h2>Learn Toki Pona</h2>
   <div>
-    <button type="button" onclick=getWord()>Get New Word</button>
+    <button onclick="getWord()">Get New Word</button>
   </div>
   <div>
    
@@ -60,7 +60,7 @@
        }
        
     }
-</script>lkjdaf;
+</script>
      <br>
      <br>
 <a href="./"><button>Home</button></a>
