--- a/pona.html
+++ b/pona.html
@@ -8,7 +8,7 @@
 <body style="background-color:powderblue;", onload=getWord()>
  <h2>Learn Toki Pona</h2>
   <div>
-    <button onclick="getWord();">Get New Word</button>
+    <button onclick="getWord();"/>Get New Word</button>
   </div>
 
   <script>
@@ -52,7 +52,7 @@
     }
 </script>
      <br>
-     <br>fadslkjf
+     <br>
 <a href="./"><button>Home</button></a>
      <br>
 <a href="./pi"><button>Wonders of Pi</button></a>
