--- a/pona.html
+++ b/pona.html
@@ -8,7 +8,6 @@
 <body style="background-color:powderblue;", onload="getWord();">
  <h2>Learn Toki Pona</h2>
   <script>
-     <input type="button" value = "Get Toki Pona Definition" onclick = "getWord()" />
     function getWord(){
        
      import java.util.scanner
@@ -46,7 +45,8 @@
        }
        
     }
-</script>new test
+</script>
+   <button onclick="getWord()">Get Toki Pona Word</button>
      <br>
      <br>
 <a href="./"><button>Home</button></a>
