--- a/pona.html
+++ b/pona.html
@@ -12,7 +12,7 @@
   <script>
      
     function getWord(){
-     document.getElementById("wordgotten").innerHTML="hello world";
+     document.getElementById("wordgotten");
        
         import java.util.scanner
         System.out.prinln("Started");
