--- a/pona.html
+++ b/pona.html
@@ -8,7 +8,7 @@
 <body style="background-color:powderblue;", onload="getWord();">
  <h2>Learn Toki Pona</h2>
    
-   <button onclick="getWord()" id="wordgotten">Get Toki Pona Word</button>
+   <button type="button" onclick="getWord()" id="wordgotten">Get Toki Pona Word</button>
   <script>
      
     function getWord(){
