--- a/pona.html
+++ b/pona.html
@@ -7,13 +7,11 @@
    </head>
 <body style="background-color:powderblue;", onload="getWord();">
  <h2>Learn Toki Pona</h2>
-   
-   <button type="button" onclick="getWord()" id="wordgotten">Get Toki Pona Word</button>
+   lhgljblkn
+   <button type="button" onclick="getWord()">Get Toki Pona Word</button>
   <script>
      
     function getWord(){
-     document.getElementById("wordgotten");
-       
         import java.util.scanner
         System.out.prinln("Started");
          //Make the dictionary of the words
