--- a/pona.html
+++ b/pona.html
@@ -7,7 +7,7 @@
    </head>
 <body style="background-color:powderblue;", onload="getWord();">
  <h2>Learn Toki Pona</h2>
-   lhgljblkn
+   
   <script>
      
     function getWord(){
@@ -49,7 +49,7 @@
 </script>
    
    <button type="button" onclick="getWord()">Get Toki Pona Word</button>
-     <br>
+     <br>khgfjhgfj
      <br>
 <a href="./"><button>Home</button></a>
      <br>
