--- a/pona.html
+++ b/pona.html
@@ -10,7 +10,7 @@
    
   <script>
      
-    function getWord(){
+    function tokiWords(){
         import java.util.scanner
         System.out.prinln("Started");
          //Make the dictionary of the words
@@ -48,7 +48,7 @@
     }
 </script>
    
-   <button type="button" onclick="getWord()">Get Toki Pona Word</button>
+   <button type="button" onclick="tokiWords()">Get Toki Pona Word</button>
      <br>
      <br>
 <a href="./"><button>Home</button></a>
