--- a/pona.html
+++ b/pona.html
@@ -9,8 +9,9 @@
  <h2>Learn Toki Pona</h2>
    
   <script>
-     
+     <input type="button" value="Toki Definition" onclick="tokiWords();">
     function tokiWords(){
+       
         import java.util.scanner
         System.out.prinln("Started");
          //Make the dictionary of the words
@@ -48,7 +49,6 @@
     }
 </script>
    
-   <button type="button" onclick="tokiWords()">Get Toki Pona Word</button>adkjfas
      <br>
      <br>
 <a href="./"><button>Home</button></a>
