--- a/pona.html
+++ b/pona.html
@@ -7,6 +7,9 @@
    </head>
 <body style="background-color:powderblue;", onload="getWord();">
  <h2>Learn Toki Pona</h2>
+
+   
+  <button onclick="tokiWords()" id="wordGotten">Toki Definitions</button>
   <script>
     function tokiWords(){
         document.getElementById("result").innerHTML="Work"
@@ -46,8 +49,7 @@
           }
        
     }
-</script>
-   <button onclick="tokiWords()" id="wordGotten">Toki Definitions</button>
+</script>dadjfhlaskjhfd
      <br>
      <br>
 <a href="./"><button>Home</button></a>
