--- a/pona.html
+++ b/pona.html
@@ -9,10 +9,8 @@
  <h2>Learn Toki Pona</h2>
 
    
-  <button onclick="tokiWords()" id="wordGotten">Toki Definitions</button>
   <script>
     function tokiWords(){
-        document.getElementById("result").innerHTML="Work"
        
         import java.util.scanner
         System.out.prinln("Started");
@@ -49,7 +47,9 @@
           }
        
     }
-</script>dadjfhlaskjhfd
+</script>
+   
+  <button onclick="tokiWords();">Toki Word</button>
      <br>
      <br>
 <a href="./"><button>Home</button></a>
