--- a/pona.html
+++ b/pona.html
@@ -14,7 +14,7 @@
       System.out.println("hello world");
    </script>
    
-  <button onclick="tokiWords();">Toki Word</button>
+  <button onclick="tokiWords();">Toki Definitions</button>
      <br>
      <br>
 <a href="./"><button>Home</button></a>
