--- a/pona.html
+++ b/pona.html
@@ -9,12 +9,12 @@
  <h2>Learn Toki Pona</h2>
 
    
-  <script>
+  <script type="text/javascript">
     function tokiWords(){
       System.out.println("hello world");
    </script>
    
-  <button onclick="tokiWords();">Toki Definitions</button>
+  <button onclick="tokiWords();">Toki Words</button>
      <br>
      <br>
 <a href="./"><button>Home</button></a>
