--- a/pona.html
+++ b/pona.html
@@ -12,9 +12,10 @@
   <script type="text/javascript">
     function tokiWords(){
       System.out.println("hello world");
+    }
    </script>
    
-  <button onclick="tokiWords();">Toki Words</button>
+  <button onclick="tokiWords();">Toki </button>
      <br>
      <br>
 <a href="./"><button>Home</button></a>
