--- a/pona.html
+++ b/pona.html
@@ -9,14 +9,14 @@
  <h2>Learn Toki Pona</h2>
 
    <script> 
-      function fun() { 
-         document.getElementById("result").innerHTML = "The function fun() is triggered !"; 
+      function tokiWords() { 
+         document.getElementById("wordGotten").innerHTML = "The function fun() is triggered !"; 
       } 
    </script>
    Calling js function using HTML button <br><br>
-   <button onclick = "fun()"> click me !</button> 
+   <button onclick = "tokiWords()"> Get Toki word</button> 
    <p> 
-      <div id = "result"> </div> 
+      <div id = "wordGotten"> </div> 
    </p> 
      <br>
      <br>
