--- a/pona.html
+++ b/pona.html
@@ -11,10 +11,11 @@
    <script> 
       function tokiWords() { 
          document.getElementById("wordGotten").innerHTML = "The function fun() is triggered !"; 
+         System.out.println("Worked")
       } 
    </script>
    Calling js function using HTML button <br><br>
-   <button onclick = "tokiWords()"> Get Toki word</button> 
+   <button onclick = "tokiWords()"> Get Toki </button> 
    <p> 
       <div id = "wordGotten"> </div> 
    </p> 
