--- a/pona.html
+++ b/pona.html
@@ -5,20 +5,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Toki Pona</title>
    </head>
-<body style="background-color:powderblue;", onload="getWord();">
+<body style="background-color:powderblue;", onload="tokiWords()">
  <h2>Learn Toki Pona</h2>
 
    <script> 
       function tokiWords() { 
-         document.getElementById("wordGotten").innerHTML = "The function fun() is triggered !"; 
          System.out.println("Worked");
       } 
    </script>
-   Calling js function using HTML button <br><br>
-   <button onclick = "tokiWords()"> Get  </button> 
-   <p> 
-      <div id = "wordGotten"> </div> 
-   </p> 
      <br>
      <br>
 <a href="./"><button>Home</button></a>
