--- a/pona.html
+++ b/pona.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Toki Pona</title>
    </head>
-<body style="background-color:powderblue;", onload="tokiWords()">
+<body style="background-color:powderblue;" onload="tokiWords()">
  <h2>Learn Toki Pona</h2>
 
    <script> 
