--- a/pona.html
+++ b/pona.html
@@ -7,8 +7,11 @@
    </head>
 <body style="background-color:powderblue;" onload="tokiWords()">
  <h2>Learn Toki Pona</h2>
-
+   <button id="wordGotten">Click</button>
    <script> 
+      var btn = document.getElementById(“wordGotten”);
+      btn.addEventListener(“click”, tokiWords);
+      }
       function tokiWords() { 
          System.out.println("Worked");
       } 
