--- a/pona.html
+++ b/pona.html
@@ -13,7 +13,7 @@
       btn.addEventListener(“click”, tokiWords);
       }
       function tokiWords() { 
-         System.out.println("Worked");
+        System.out.println("Hello World!");
       } 
    </script>
      <br>
