--- a/pona.html
+++ b/pona.html
@@ -7,7 +7,7 @@
    </head>
 <body style="background-color:powderblue;" onload="tokiWords()">
  <h2>Learn Toki Pona</h2>
-   <button id="wordGotten">Click</button>
+   <button id="wordGotten">Hey</button>
    <script> 
       var btn = document.getElementById(“wordGotten”);
       btn.addEventListener(“click”, tokiWords);
