--- a/pona.html
+++ b/pona.html
@@ -7,13 +7,14 @@
    </head>
 <body style="background-color:powderblue;" onload="tokiWords()">
  <h2>Learn Toki Pona</h2>
-   <button id="wordGotten">Hey</button>
+   
+   <button id="wordGotten">please</button>
    <script> 
       var btn = document.getElementById(“wordGotten”);
       btn.addEventListener(“click”, tokiWords);
       }
       function tokiWords() { 
-        System.out.println("Hello World!");
+        alert("Hello World!");
       } 
    </script>
      <br>
