--- a/pona.html
+++ b/pona.html
@@ -9,7 +9,7 @@
  <h2>Learn Toki Pona</h2>
    
 <div>
-  <button type="tokiWords" onclick="tokiWords()">Random Music</button>
+  <button type="tokiWords" onclick="tokiWords()">Toki Pona</button>
   <input name="tokiWords" id="tokiWords">
 </div>
 
