--- a/pona.html
+++ b/pona.html
@@ -9,7 +9,7 @@
  <h2>Learn Toki Pona</h2>
    
 <div>
-  <button type="tokiWords" onclick="tokiWords()">Toki Pona</button>
+  <button type="tokiWords" onclick="tokiWords()">Toki </button>
   <input name="tokiWords" id="tokiWords">
 </div>
 
@@ -19,7 +19,7 @@ var song = Array("song1", "song2", "song3", "song4", "song5", "song6");
 
 function tokiWords() {
   var randomSong = song[Math.floor(Math.random() * song.length)];
-  document.getElementById('randomSong').value = randomSong;
+  document.getElementById('tokiWords').value = tokiWords;
 }
 </script>
 <a href="./"><button>Home</button></a>
