--- a/pona.html
+++ b/pona.html
@@ -9,7 +9,7 @@
  <h2>Learn Toki Pona</h2>
    
 <div>
-  <button type="tokiWords" onclick="tokiWords()">Toki </button>
+  <button type="tokiWords" onclick="tokiWords()" id="tokiWords">Toki Pona </button>
 </div>
 
 <script>
