--- a/pona.html
+++ b/pona.html
@@ -18,8 +18,8 @@ var words = Array("a", "akesi", "ala");
 var defs = Array("Emphasis", "Reptile", "Nothing");
 
 function tokiWords() {
+   alert("It worked);
   var randDef = defs[Math.floor(Math.random() * defs.length)];
-   System.out.println(randDef);
   document.getElementById('tokiWords').value = "Hello";
 }
 </script>
